# debun

./: Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
src/: args.rs  binary.rs  embedded.rs  extract.rs  js.rs  json.rs  lib.rs  main.rs  output.rs  pack.rs  pack_support.rs  patch.rs  rewrite.rs  split.rs  standalone.rs  standalone_decode.rs
src/args/: defaults.rs  mod.rs  parse.rs
src/embedded/: detect.rs  metadata.rs  mod.rs  raw.rs  structured.rs  tests.rs  version.rs
src/embedded/raw/: files.rs  macho.rs  mod.rs
src/js/: mod.rs  pipeline.rs  rename.rs  report.rs  transform.rs  unbundle.rs
src/output/: json.rs  manifest.rs  mod.rs  runtime.rs  state.rs  summary.rs  writer.rs
src/rewrite/: mod.rs  parser.rs  planner.rs  tests.rs
src/rewrite/analysis/: collectors.rs  helpers.rs  mod.rs  targets.rs
src/split/: candidate.rs  extract.rs  mod.rs  naming.rs  render.rs  source.rs
src/standalone/: container.rs  layout.rs  mod.rs  model.rs  parse.rs  tests.rs  write.rs
src/standalone_decode/: json.rs  mod.rs  sourcemap.rs
src/standalone_decode/module_info/: decode.rs  mod.rs  model.rs  reader.rs  tests.rs
